--- a/notebooks/PrediccionPrecios.ipynb
+++ b/notebooks/PrediccionPrecios.ipynb
@@ -195,7 +195,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7ff7d4bf1760>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f5f34823c10>"
       ]
      },
      "execution_count": 12,
