--- a/notebooks/Notebook.ipynb
+++ b/notebooks/Notebook.ipynb
@@ -928,7 +928,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fa9b6e297f0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f9b3c0e7760>"
       ]
      },
      "metadata": {},
@@ -983,7 +983,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7faa073fcfa0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f9b3c08f670>"
       ]
      },
      "metadata": {},
